# Generated by Django 4.1.1 on 2022-11-06 08:39

from django.conf import settings
from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Vendor',
            fields=[
                ('id', models.BigAutoField(editable=False, primary_key=True, serialize=False, verbose_name='id')),
                ('is_active', models.BooleanField(default=True, verbose_name='active')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='created at')),
                ('last_modified_at', models.DateTimeField(auto_now=True, verbose_name='last modified at')),
                ('name', models.CharField(max_length=100, verbose_name='name of vendor')),
                ('description', models.TextField(null=True, verbose_name='description of vendor')),
                ('phone_no', models.CharField(max_length=30, verbose_name='phone number')),
                ('is_verified', models.BooleanField(default=False, verbose_name='is vendor verified')),
                ('is_newsletter_enabled', models.BooleanField(default=True, verbose_name='newsletter enabled')),
                ('user', models.OneToOneField(limit_choices_to={'user_type': 2}, on_delete=django.db.models.deletion.CASCADE, related_name='related_vendor', to=settings.AUTH_USER_MODEL, verbose_name='vendor profile of')),
            ],
            options={
                'ordering': ['-created_at'],
            },
        ),
    ]
